styles.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --size: 300px;
  --color: #333;
}
body {
  background-color: #888;
  font-family: "Quicksand", Times, serif;
  font-size: calc(var(--size) * 0.07);
  font-weight: 400;
}
.wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 500px;
  width: 500px;
  margin: 80px auto;
}

.watch {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: var(--size);
  width: var(--size);
  border-radius: 100%;
  background-color: #eee;
  border: calc(var(--size) * 0.04) solid var(--color);
}

.minutes,
.hours {
  position: absolute;
  width: 0;
  height: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 100%;
}

.minutes span {
  position: absolute;
  width: 0;
  height: 0;
}

.minutes span::before,
.minutes span::after {
  content: "";
  position: absolute;
  width: calc(var(--size) * 0.005);
  height: calc(var(--size) * 0.04);
  background-color: var(--color);
  border-radius: 4px;
  left: calc(var(--size) * -0.005 / 2);
  top: calc(var(--size) * -0.04 / 2);
}
.hours span::before,
.hours span::after {
  content: "";
  position: absolute;
  width: 0;
  height: 0;
  background-color: var(--color);
  display: flex;
  justify-content: center;
  align-items: center;
}

.hours span::after {
  transform: rotate(90deg);
}

.minutes span::before {
  transform: translateY(calc(var(--size) * -0.4));
}

.minutes span::after {
  transform: translateY(calc(var(--size) * 0.4));
}

.hours span::before {
  transform: translateY(calc(var(--size) * -0.2));
}

.hours span::after {
  transform: translateY(calc(var(--size) * 0.2)) rotate(180deg);
}

.minutes span:nth-child(1),
.hours span:nth-child(1) {
  transform: rotate(30deg);
}
.minutes span:nth-child(2),
.hours span:nth-child(2) {
  transform: rotate(60deg);
}
.minutes span:nth-child(3),
.hours span:nth-child(3) {
  transform: rotate(90deg);
}
.minutes span:nth-child(4),
.hours span:nth-child(4) {
  transform: rotate(120deg);
}
.minutes span:nth-child(5),
.hours span:nth-child(5) {
  transform: rotate(150deg);
}
.minutes span:nth-child(6),
.hours span:nth-child(6) {
  transform: rotate(180deg);
}

.hours span:nth-child(1)::before {
  content: "1";
}
.hours span:nth-child(1)::after {
  content: "7";
}
.hours span:nth-child(2)::before {
  content: "2";
}
.hours span:nth-child(2)::after {
  content: "8";
}
.hours span:nth-child(3)::before {
  content: "3";
}
.hours span:nth-child(3)::after {
  content: "9";
}
.hours span:nth-child(4)::before {
  content: "4";
}
.hours span:nth-child(4)::after {
  content: "10";
}
.hours span:nth-child(5)::before {
  content: "5";
}
.hours span:nth-child(5)::after {
  content: "11";
}
.hours span:nth-child(6)::before {
  content: "6";
}
.hours span:nth-child(6)::after {
  content: "12";
}

.hand {
  position: absolute;
  width: 0;
  height: 0;
  background-color: var(--color);
}

.hand::before,
.hand::after {
  content: "";
  position: absolute;
  width: calc(var(--size) * 0.01);
  left: calc(var(--size) * -0.005 / 2);
  background-color: var(--color);
  border-radius: 4px;
}

.hand::before {
  height: calc(var(--size) * 0.35);
  top: calc(var(--size) * -0.34);
}

.hand::after {
  height: calc(var(--size) * 0.16);
  top: 0%;
}

